# clab-sonic

./: .gitignore  .sonic.yml.bak  README.md  confGen.py  defaultConfigAttrs.json  deploy.sh  destroy.sh  pyproject.toml  sonic.yml  updateDefaultKeys.py
clab-sonic/: ansible-inventory.yml  authorized_keys  topology-data.json
clab-sonic-clos/: ansible-inventory.yml  topology-data.json
clab-sonic-clos/.tls/ca/: ca.key  ca.pem
clab-sonic-clos/leaf1/config/: config_db.json
clab-sonic-clos/leaf2/config/: config_db.json
clab-sonic-clos/leaf3/config/: config_db.json
clab-sonic-clos/leaf4/config/: config_db.json
clab-sonic-clos/spine1/config/: config_db.json
clab-sonic-clos/spine2/config/: config_db.json
clab-sonic-clos/spine3/config/: config_db.json
clab-sonic-clos/spine4/config/: config_db.json
clab-sonic-clos/superspine1/config/: config_db.json
clab-sonic-clos/superspine2/config/: config_db.json
clab-sonic/.tls/ca/: ca.key  ca.pem
clab-sonic/leaf1/config/: config_db.json
clab-sonic/leaf2/config/: config_db.json
clab-sonic/leaf3/config/: config_db.json
clab-sonic/leaf4/config/: config_db.json
clab-sonic/spine1/config/: config_db.json
clab-sonic/spine2/config/: config_db.json
clab-sonic/spine3/config/: config_db.json
clab-sonic/spine4/config/: config_db.json
clab-sonic/superspine1/config/: config_db.json
clab-sonic1/: ansible-inventory.yml  topology-data.json
clab-sonic1/.tls/ca/: ca.key  ca.pem
data/: defaultConfigAttrs.json  overrides.yml
labs/sonic-202411/: README.md  topology.yml
labs/sonic-202505/: README.md  topology.yml
(+18 files in other folders)
